fixed scrollbar taking up width

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,10 @@
   line-height: 1.6;
 }
 
+html {
+  width: 100vw;
+}
+
 body {
   padding: 0;
   font-weight: 300;
@@ -144,6 +148,7 @@ input:-webkit-autofill:focus {
   border-top: 4px solid var(--gamecube-color);
   position: sticky;
   top: 0;
+  margin-bottom: 1rem;
 }
 
 .header__logo img {
